Fixed tickets overflow and left todo comment

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -33,6 +33,8 @@
 
 .home {
   min-height: 100vh;
+  overflow: hidden;
+  width: 100vw;
 
   .hero {
     min-height: 100vh;
@@ -233,6 +235,7 @@
       z-index: 2;
       position: relative;
 
+      // todo: upgrade the responsiveness styling with something more sophisticated. I'm sick rn so I can't really think forgive me :(
       --transform-scale: 0.5;
 
       @include media('<=tablet') {
